--- a/microservices/docker-compose.yaml
+++ b/microservices/docker-compose.yaml
@@ -9,5 +9,16 @@ services:
     volumes:
       - mongo_vol:/var/lib/mongo
 
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - '6379:6379'
+    expose:
+      - '6379'
+    volumes:
+      - redis_vol:/data
+
 volumes:
   mongo_vol:
+  redis_vol:
